--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,36 @@
-# =============== #
-# Unity generated #
-# =============== #
+=============== 
+Unity generated
+===============
 Temp/
-Obj/
-UnityGenerated/
 Library/
-Builds/
 
-# ===================================== #
-# Visual Studio / MonoDevelop generated #
-# ===================================== #
+=====================================
+Visual Studio / MonoDevelop generated
+=====================================
 ExportedObj/
+obj/
 *.svd
 *.userprefs
-*.csproj
+/*.csproj
 *.pidb
 *.suo
-*.sln
+/*.sln
 *.user
 *.unityproj
 *.booproj
 
-# ============ #
-# OS generated #
-# ============ #
+============
+OS generated
+============
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
-Icon?
 ehthumbs.db
 Thumbs.db
+
+============
+custom
+============
+Builds/
